# eterna-engine

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs  ws.rs
crates/engine/: Cargo.toml
crates/engine/src/: book.rs  lib.rs  types.rs
crates/matcher/: Cargo.toml
crates/matcher/src/: main.rs
crates/matcher/tests/: integration.rs
crates/shared/: Cargo.toml
crates/shared/src/: bus.rs  config.rs  db.rs  lib.rs  model.rs
migrations/: 0001_init.sql
