[package]
name = "matcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "matcher"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
